[gd_scene load_steps=16 format=3 uid="uid://n2b7g2sgt2f2"]

[ext_resource type="Texture2D" uid="uid://cshdijxf5xady" path="res://SkyHDR.hdr" id="1_bs4lu"]
[ext_resource type="Script" path="res://world.gd" id="1_e1a2b"]
[ext_resource type="PackedScene" uid="uid://bp7ddgwveia6k" path="res://box.tscn" id="2_qvrly"]
[ext_resource type="Script" path="res://world_environment.gd" id="4_i2how"]
[ext_resource type="Script" path="res://cam_pivot.gd" id="5_8nmvc"]
[ext_resource type="Material" uid="uid://u5mj8po5xo5y" path="res://resources/platform_material.tres" id="5_20uhd"]
[ext_resource type="PackedScene" uid="uid://bvr5nmb0qdd8i" path="res://ui.tscn" id="6_f3m38"]
[ext_resource type="Script" path="res://overlay.gd" id="7_ry8su"]
[ext_resource type="Script" path="res://cannon.gd" id="9_a2vie"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_2jmea"]
panorama = ExtResource("1_bs4lu")

[sub_resource type="Sky" id="Sky_lnbfj"]
sky_material = SubResource("PanoramaSkyMaterial_2jmea")

[sub_resource type="Environment" id="Environment_kpd4p"]
background_mode = 2
sky = SubResource("Sky_lnbfj")
tonemap_mode = 2
ssr_enabled = true
ssao_enabled = true
ssil_enabled = true
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_gn31a"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a0805"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bo2bw"]
size = Vector3(300, 1, 300)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_e1a2b")
box_scene = ExtResource("2_qvrly")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kpd4p")
script = ExtResource("4_i2how")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Platform" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform"]
mesh = SubResource("BoxMesh_gn31a")
surface_material_override/0 = ExtResource("5_20uhd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform"]
shape = SubResource("BoxShape3D_a0805")

[node name="SpawnPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)
gizmo_extents = 1.0

[node name="Boxes" type="Node3D" parent="."]

[node name="HPivot" type="Node3D" parent="."]
script = ExtResource("5_8nmvc")

[node name="VPivot" type="Node3D" parent="HPivot"]
transform = Transform3D(1, 0, 0, 0, 0.887011, 0.461749, 0, -0.461749, 0.887011, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="HPivot/VPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 39.005)

[node name="Bounds" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounds"]
shape = SubResource("BoxShape3D_bo2bw")

[node name="Cannon" type="Node3D" parent="."]
script = ExtResource("9_a2vie")

[node name="Overlay" type="Control" parent="." node_paths=PackedStringArray("box_parent")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_ry8su")
box_parent = NodePath("../Boxes")

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -59.0
grow_horizontal = 0
grow_vertical = 0

[node name="Toggle" type="CheckButton" parent="Overlay/VBoxContainer"]
layout_mode = 2
focus_mode = 0
button_pressed = true
text = "Spawning"

[node name="Clear" type="Button" parent="Overlay/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Clear"

[node name="UI" parent="." instance=ExtResource("6_f3m38")]
visible = false

[node name="ClearBelowTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="Bounds" to="." method="_on_bounds_body_entered"]
[connection signal="toggled" from="Overlay/VBoxContainer/Toggle" to="." method="_on_toggle_toggled"]
[connection signal="pressed" from="Overlay/VBoxContainer/Clear" to="Overlay" method="_on_clear_pressed"]
[connection signal="box_bounce_changed" from="UI" to="." method="_on_ui_box_bounce_changed"]
[connection signal="box_collision_changed" from="UI" to="." method="_on_ui_box_collision_changed"]
[connection signal="box_friction_changed" from="UI" to="." method="_on_ui_box_friction_changed"]
[connection signal="box_mesh_changed" from="UI" to="." method="_on_ui_box_mesh_changed"]
[connection signal="box_size_changed" from="UI" to="." method="_on_ui_box_size_changed"]
[connection signal="cannon_mass_changed" from="UI" to="Cannon" method="_on_ui_cannon_mass_changed"]
[connection signal="cannon_size_changed" from="UI" to="Cannon" method="_on_ui_cannon_size_changed"]
[connection signal="cannon_speed_changed" from="UI" to="Cannon" method="_on_ui_cannon_speed_changed"]
[connection signal="cannon_voffset_changed" from="UI" to="Cannon" method="_on_ui_cannon_voffset_changed"]
[connection signal="platform_shape_changed" from="UI" to="." method="_on_ui_platform_shape_changed"]
[connection signal="platform_size_changed" from="UI" to="." method="_on_ui_platform_size_changed"]
[connection signal="random_offset_changed" from="UI" to="." method="_on_ui_random_offset_changed"]
[connection signal="random_rotation_toggled" from="UI" to="." method="_on_ui_random_rotation_toggled"]
[connection signal="sdfgi_toggled" from="UI" to="WorldEnvironment" method="_on_ui_sdfgi_toggled"]
[connection signal="spawn_offset_changed" from="UI" to="." method="_on_ui_spawn_offset_changed"]
[connection signal="ssao_toggled" from="UI" to="WorldEnvironment" method="_on_ui_ssao_toggled"]
[connection signal="ssil_toggled" from="UI" to="WorldEnvironment" method="_on_ui_ssil_toggled"]
[connection signal="ssr_toggled" from="UI" to="WorldEnvironment" method="_on_ui_ssr_toggled"]
[connection signal="timeout" from="ClearBelowTimer" to="." method="_on_clear_below_timer_timeout"]
